# esp3_agent_orchestrator

./: .env.example  .gitignore  Dockerfile  Orchestrator_PP3.json  README.md  agents.md  docker-compose.yaml  docker-compose.yml  gunicorn_conf.py  project_default_statement.md  pyproject.toml  requirements.txt
app/: app.py  main.py  mcp_server.py
app/db/: ensure_indexes.py  mongo.py  seed.py
app/model/: api_models.py  common.py  db_models.py
app/router/: app_router.py  metrics_router.py  orchestrator_router.py  prediction_router.py
app/service/: fusion_service.py  orchestrator_service.py  pp1_service.py  pp2_service.py  validation_service.py
app/utils/: security.py
data/: sources.csv
tests/: conftest.py  test_api.py  test_fusion.py  test_mcp_local.py
tests/integration/: test_metrics.py
